--- a/pegasus/sites.v3/code.org/public/administrators.haml
+++ b/pegasus/sites.v3/code.org/public/administrators.haml
@@ -21,7 +21,10 @@ theme: responsive_full_width
     .clear
 
 - if !DCDO.get('show-updated-lms-content', false)
-  = view :section_divider_line
+  - if !!DCDO.get('curriculum-launch-2024', false)
+    = view :curriculum_launch_skinny_banner
+  - else
+    = view :section_divider_line
 
 = view :"lms/lms_skinny_banner"
 
