--- a/pegasus/sites.v3/code.org/public/teach.haml
+++ b/pegasus/sites.v3/code.org/public/teach.haml
@@ -20,6 +20,8 @@ theme: responsive_full_width
     .clear
 
 = view :"lms/lms_skinny_banner"
+- if !DCDO.get('show-updated-lms-content', false)
+  = view :curriculum_launch_skinny_banner
 
 %section.why-teach-cs.bg-neutral-light
   .wrapper
