Add the expanded lessons too

--- a/apps/src/templates/sectionProgressV2/progress-table-v2.module.scss
+++ b/apps/src/templates/sectionProgressV2/progress-table-v2.module.scss
@@ -173,6 +173,7 @@ $level-cell-width: 52;
     height: 42px;
     line-height: 42px;
     min-width: 52px;
+    margin-bottom: 32px;
     text-align: center;
     background-color: $light_gray_50;
     font-size: 14px;
@@ -187,6 +188,7 @@ $level-cell-width: 52;
     line-height: 42px;
     min-width: 52px;
     text-align: center;
+    margin-bottom: 32px;
     background-color: $light_gray_50;
     font-size: 14px;
     font-weight: 600;
@@ -217,7 +219,6 @@ $level-cell-width: 52;
     flex-direction: column;
     border-bottom: 1px solid $neutral_dark40;
     border-right: 1px solid $neutral_dark40;
-    margin-top: 76px;
   }
 }
 
@@ -339,6 +340,7 @@ $level-cell-width: 52;
     // This is one more to compensate for the -1px margin-right on the lesson column
     margin-left: 13px;
     margin-right: 12px;
+    min-width: 82px;
   }
 
   &Column + &Column {
