--- a/apps/src/aichat/views/chatWorkspace.module.scss
+++ b/apps/src/aichat/views/chatWorkspace.module.scss
@@ -11,14 +11,13 @@ $default-spacing: 2px;
 }
 
 .conversationArea {
-  margin: 5px 2%;
   height: 65vh;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   gap: $default-spacing;
   box-sizing: border-box;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .waitingForResponse {
