--- a/pegasus/sites.v3/code.org/public/maker/index.haml
+++ b/pegasus/sites.v3/code.org/public/maker/index.haml
@@ -7,7 +7,7 @@ theme: responsive_full_width
 %script{data: {'statsig-api-client-key': CDO.safe_statsig_api_client_key}}
 %script{data: {'managed-test-server': "#{CDO.running_web_application? && CDO.test_system?}"}}
 %link{href: "/css/generated/design-system-pegasus.css", rel: "stylesheet"}
-%link{href: "/css/generated/page/maker-index-styles.css", rel: "stylesheet"}
+%link{href: "/css/generated/page/maker-styles.css", rel: "stylesheet"}
 
 -# FontAwesome icons
 - icon_microchip = "fa-solid fa-microchip"
@@ -15,7 +15,7 @@ theme: responsive_full_width
 - icon_face_smile = "fa-solid fa-face-smile"
 
 %section.hero-banner-basic.overlay
-  .wrapper.grid-container.justify-space-between.align-items-center.gap-4.wider-text
+  .wrapper.grid-container.justify-space-between.align-items-center.gap-4
     .text-wrapper
       %h1.white
         Become a Maker
