--- a/pegasus/sites.v3/code.org/public/css/page/maker-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/page/maker-styles.scss
@@ -13,7 +13,7 @@ section.hero-banner-basic {
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(90deg, #037781 0%, #0898A5 100%);
+      background: linear-gradient(135deg, #005652 0%, #007E79 100%);
       z-index: 1;
     }
 
@@ -31,12 +31,29 @@ section.hero-banner-basic {
     }
   }
 
+  @media (max-width: $width-sm) {
+    padding-bottom: 0;
+  }
+
+  @media (min-width: $width-sm) {
+    padding-block: 0;
+  }
+
   .wrapper {
     position: relative;
     z-index: 10;
 
     @media screen and (max-width: $width-md) {
       gap: 2rem;
+    }
+  }
+
+  figure {
+    margin-bottom: -1px;
+    overflow: hidden;
+
+    @media (min-width: $width-sm) {
+      padding-top: 2rem;
     }
   }
 }
