add tablet styles for case study section

--- a/pegasus/sites.v3/code.org/public/maker/index.haml
+++ b/pegasus/sites.v3/code.org/public/maker/index.haml
@@ -35,8 +35,8 @@ theme: responsive_full_width
 -# TODO - remove the divider line and unhide case study section when we get the link
 = view :section_divider_line
 -# %section.bg-neutral-dark
--#   .wrapper.flex-container.justify-space-between.align-items-center.flex-direction-column-mobile.gap-3
--#     .text-wrapper.flex-1
+-#   .wrapper.flex-container.justify-space-between.align-items-center.flex-direction-column-mobile.gap-2
+-#     .text-wrapper{style: "flex: 0.9"}
 -#       %p.overline-two.white
 -#         =hoc_s("maker_page.case_study.overline")
 -#       %h2.heading-lg.white
