add hero banner bg image

--- a/pegasus/sites.v3/code.org/public/css/page/maker-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/page/maker-styles.scss
@@ -24,9 +24,9 @@ section.hero-banner-basic {
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url('/images/banners/banner-bg-map.png');
+      background-image: url('/images/banners/banner-bg-circuit-dots.png');
       background-repeat: repeat;
-      background-size: contain;
+      background-size: auto;
       z-index: 2;
     }
   }
