--- a/pegasus/sites.v3/code.org/public/css/maker-styles.scss
+++ b/pegasus/sites.v3/code.org/public/css/maker-styles.scss
@@ -2,7 +2,7 @@
 // code.org/maker/circuitplayground
 // — supplemental to shared/css/design-system-pegasus.scss
 
-@import 'breakpoints';
+@import 'color', 'font', 'breakpoints', 'barlow-semi-condensed-font';
 
 .flex-container {
   display: flex;
