--- a/pegasus/sites.v3/code.org/public/maker/index.haml
+++ b/pegasus/sites.v3/code.org/public/maker/index.haml
@@ -64,7 +64,15 @@ theme: responsive_full_width
 
 %section.bg-neutral-light
   .wrapper
-    CAREERS
+    .grid-container.two-col.justify-space-between.align-items-center.gap-4
+      .text-wrapper
+        %h2=hoc_s("maker_page.careers.heading")
+        %h3.heading-sm
+          =hoc_s("maker_page.careers.subhead")
+        %p=hoc_s("maker_page.careers.desc")
+      %figure.video-responsive{style: "margin-top: 5px; max-width: unset"}
+        %div
+          %iframe{src: "https://www.youtube-nocookie.com/embed/dhvQ7L5UScs", title: "Careers with Computer Science: Design Technologist at Meow Wolf", allowfullscreen: "true", frameborder: "0"}
 
 %section
   .wrapper
@@ -73,7 +81,9 @@ theme: responsive_full_width
 = view :section_divider_line
 
 %section
-  .wrapper
-    ADDITIONAL RESOURCES
+  .wrapper.centered
+    %h2=hoc_s("maker_page.additional_resources.heading")
+    %p=hoc_s("maker_page.additional_resources.desc")
+    = view :maker_additional_resources
 
 = view :analytics_event_log_helper, event_name: AnalyticsConstants::PHYSICAL_COMPUTING_PAGE_VISITED_EVENT
