--- a/pegasus/sites.v3/code.org/public/maker/index.haml
+++ b/pegasus/sites.v3/code.org/public/maker/index.haml
@@ -58,9 +58,17 @@ theme: responsive_full_width
     %h2=hoc_s("maker_page.why.heading")
     = view :maker_why_list
 
-%section
+%section#curriculum_link_microbit
   .wrapper
-    CURRICULUM
+    %h2=hoc_s("maker_page.curricula_microbit.heading")
+    %p=hoc_s("maker_page.curricula_microbit.desc")
+
+= view :section_divider_line
+
+%section#curriculum_link_cp
+  .wrapper
+    %h2=hoc_s("maker_page.curricula_circuit_playground.heading")
+    = view :maker_curriculum_circuit_playground, explore_unit_link: CDO.studio_url("/s/devices?viewAs=Instructor"), teach_unit_link: CDO.studio_url("/courses/self-paced-pl-physical-computing")
 
 %section.bg-neutral-light
   .wrapper
