comment out case study section

--- a/pegasus/sites.v3/code.org/public/maker/index.haml
+++ b/pegasus/sites.v3/code.org/public/maker/index.haml
@@ -34,18 +34,18 @@ theme: responsive_full_width
 
 -# TODO - remove the divider line and unhide case study section when we get the link
 = view :section_divider_line
-%section.bg-neutral-dark
-  .wrapper.flex-container.justify-space-between.align-items-center.flex-direction-column-mobile.gap-2
-    .text-wrapper{style: "flex: 0.9"}
-      %p.overline-two.white
-        =hoc_s("maker_page.case_study.overline")
-      %h2.heading-lg.white
-        =hoc_s("maker_page.case_study.heading")
-      %p.body-three.white.no-margin-bottom
-        =hoc_s("maker_page.case_study.desc")
-    %img{src: "/images/maker/alaska.png", alt: "", style: "width: 182px"}
-    %a.link-button.white.has-external-link{href: "#", target: "_blank", rel: "noopener noreferrer"}
-      =hoc_s("maker_page.case_study.button")
+-# %section.bg-neutral-dark
+-#   .wrapper.flex-container.justify-space-between.align-items-center.flex-direction-column-mobile.gap-2
+-#     .text-wrapper{style: "flex: 0.9"}
+-#       %p.overline-two.white
+-#         =hoc_s("maker_page.case_study.overline")
+-#       %h2.heading-lg.white
+-#         =hoc_s("maker_page.case_study.heading")
+-#       %p.body-three.white.no-margin-bottom
+-#         =hoc_s("maker_page.case_study.desc")
+-#     %img{src: "/images/maker/alaska.png", alt: "", style: "width: 182px"}
+-#     %a.link-button.white.has-external-link{href: "#", target: "_blank", rel: "noopener noreferrer"}
+-#       =hoc_s("maker_page.case_study.button")
 
 %section
   .wrapper
