add devise-jwt and return jwt on json login path

--- a/config.yml.erb
+++ b/config.yml.erb
@@ -36,6 +36,7 @@ dashboard_schoolproject_secret: !Secret
 dashboard_auth0_client_id: !Secret
 dashboard_auth0_secret: !Secret
 dashboard_auth0_domain: !Secret
+devise_jwt_secret_key: !Secret
 
 # Recaptcha
 recaptcha_site_key: !Secret
