use basic inputs

--- a/apps/src/lab2/views/components/predict-question.module.scss
+++ b/apps/src/lab2/views/components/predict-question.module.scss
@@ -1,4 +1,9 @@
-.multipleChoiceContainer {
-  clear: both;
-  height: fit-content;
+.multipleChoiceLabel {
+  input {
+    margin: 0 4px 0 0;
+  }
+}
+
+.multipleChoiceInput {
+  padding-right: 5px;
 }
