remove margin on careers paragraph

--- a/pegasus/sites.v3/code.org/public/maker/index.haml
+++ b/pegasus/sites.v3/code.org/public/maker/index.haml
@@ -83,7 +83,8 @@ theme: responsive_full_width
         %h2=hoc_s("maker_page.careers.heading")
         %h3.heading-sm
           =hoc_s("maker_page.careers.subhead")
-        %p=hoc_s("maker_page.careers.desc")
+        %p.no-margin-bottom
+          =hoc_s("maker_page.careers.desc")
       %figure.video-responsive{style: "margin-top: 5px; max-width: unset"}
         %div
           %iframe{src: "https://www.youtube-nocookie.com/embed/dhvQ7L5UScs", title: "Careers with Computer Science: Design Technologist at Meow Wolf", allowfullscreen: "true", frameborder: "0"}
