--- a/pegasus/sites.v3/code.org/public/curriculum/csa.haml
+++ b/pegasus/sites.v3/code.org/public/curriculum/csa.haml
@@ -60,16 +60,8 @@ theme: responsive_full_width
 
 %section
   .wrapper
-    %h2=hoc_s(:heading_professional_learning)
-    .action-block.action-block--two-col
-      %img{src: "/images/action-block-self-paced-pl.png", alt: "", class: "col-50"}
-      .text-wrapper.col-50
-        %h3.heading-sm
-          =hoc_s(:professional_learning_section_desc_short)
-        %p=hoc_s(:professional_learning_section_block_csa)
-        %p=hoc_s(:professional_learning_section_workshops_starting)
-        %a.link-button{href: "/apply"}
-          =hoc_s(:call_to_action_apply_for_pl)
+    %h2=hoc_s('csa_page.additional_resources.heading')
+    = view :csa_additional_resources
 
 = view :section_divider_line
 
