change tabs container background color

--- a/apps/src/aichat/views/model-customization-workspace.module.scss
+++ b/apps/src/aichat/views/model-customization-workspace.module.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
 
   .tabsContainer {
-    background-color: $light_gray_200
+    background-color: #EAEBEB
   }
 
   .tabPanels {
