--- a/apps/src/aichat/views/model-customization-workspace.module.scss
+++ b/apps/src/aichat/views/model-customization-workspace.module.scss
@@ -10,6 +10,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  background: $light_white;
 
   textarea {
     @extend %full-width;
