add remaining image for additional resources

--- a/pegasus/sites.v3/code.org/views/csa_additional_resources.haml
+++ b/pegasus/sites.v3/code.org/views/csa_additional_resources.haml
@@ -12,7 +12,7 @@
     {
       overline: hoc_s('csa_page.additional_resources.ap_class_quiz.overline'),
       title: hoc_s('csa_page.additional_resources.ap_class_quiz.title'),
-      image:
+      image: '/images/action-blocks/action-block-ap-classroom.png',
       desc: hoc_s('csa_page.additional_resources.ap_class_quiz.desc'),
       url: 'https://docs.google.com/document/d/1dqHsX_KdQd_CIYM8OK5UT0JoPFa1SvzB2LtcsfCKl88/edit?usp=sharing',
       button_label: hoc_s('csa_page.additional_resources.ap_class_quiz.button_label'),
