--- a/dashboard/app/views/layouts/_header.html.haml
+++ b/dashboard/app/views/layouts/_header.html.haml
@@ -125,9 +125,13 @@
 
     small_text = false
 
+    unit_href = @current_unit_group ?
+      course_script_path(@current_unit_group, script, section_id: section_id, user_id: user_id) :
+      script_path(@script, section_id: section_id, user_id: user_id)
+
     script_name_data = {
       name: text,
-      href: script_path(@script, section_id: section_id, user_id: user_id),
+      href: unit_href,
       smallText: small_text
     }
   elsif @is_code_reviewing
