P20-1019: Add `providers` param to CAP Account Settings widget events

--- a/dashboard/app/views/devise/registrations/edit.html.haml
+++ b/dashboard/app/views/devise/registrations/edit.html.haml
@@ -149,6 +149,7 @@
       permission_status: @permission_status,
       user_email: current_user.hashed_email,
       in_section: JSON.dump(current_user.student? ? current_user.sections_as_student.present? : nil),
+      providers: JSON.dump(current_user.providers.filter_map(&:presence)),
     },
   }
 
