--- a/pegasus/sites.v3/code.org/public/maker/index.haml
+++ b/pegasus/sites.v3/code.org/public/maker/index.haml
@@ -51,14 +51,14 @@ theme: responsive_full_width
   .wrapper
     %h2=hoc_s("maker_page.get_started.heading")
     %p=hoc_s("maker_page.get_started.desc")
-    = view :maker_devices, curriculum_link_cp: "#curriculum_link_cp", curriculum_link_microbit: "#curriculum_link_microbit",  button_label: hoc_s("maker_page.get_started.button.see_curriculum.label"), aria_label_cp: hoc_s("maker_page.get_started.button.see_curriculum.aria_label", markdown: :inline, locals:{device: "BBC micro:bit"}), aria_label_microbit: hoc_s("maker_page.get_started.button.see_curriculum.aria_label", markdown: :inline, locals:{device: "Circuit Playground"})
+    = view :maker_devices, curriculum_link_cp: "#curriculum-link-cp", curriculum_link_microbit: "#curriculum-link-microbit",  button_label: hoc_s("maker_page.get_started.button.see_curriculum.label"), aria_label_cp: hoc_s("maker_page.get_started.button.see_curriculum.aria_label", markdown: :inline, locals:{device: "BBC micro:bit"}), aria_label_microbit: hoc_s("maker_page.get_started.button.see_curriculum.aria_label", markdown: :inline, locals:{device: "Circuit Playground"})
 
 %section.bg-neutral-light
   .wrapper.centered
     %h2=hoc_s("maker_page.why.heading")
     = view :maker_why_list
 
-%section#curriculum_link_microbit
+%section#curriculum-link-microbit
   .wrapper
     %h2=hoc_s("maker_page.curricula_microbit.heading")
     %p=hoc_s("maker_page.curricula_microbit.desc")
@@ -71,7 +71,7 @@ theme: responsive_full_width
 
 = view :section_divider_line
 
-%section#curriculum_link_cp
+%section#curriculum-link-cp
   .wrapper
     %h2=hoc_s("maker_page.curricula_circuit_playground.heading")
     = view :maker_curriculum_circuit_playground, explore_unit_link: CDO.studio_url("/s/devices?viewAs=Instructor"), teach_unit_link: CDO.studio_url("/courses/self-paced-pl-physical-computing")
