update link on decisions tile on ai_carousel_pl.haml

--- a/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_pl.haml
+++ b/pegasus/sites.v3/code.org/views/ai_landing_page/ai_carousel_pl.haml
@@ -17,7 +17,7 @@
       img: "/images/action-blocks/action-block-ai-decisions.png",
       desc: hoc_s("ai_page.pl.tile.decisions.desc"),
       duration: hoc_s("ai_page.pl.tile.decisions.duration"),
-      url: CDO.studio_url("#"),
+      url: CDO.studio_url("/courses/elementaryai-2024"),
       aria_label: hoc_s("ai_page.pl.tile.decisions.aria_label"),
       button_label: hoc_s("ai_page.pl.tile.decisions.button"),
       new: true,
