--- a/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_high.haml
+++ b/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_high.haml
@@ -89,7 +89,7 @@
       duration: hoc_s(:module_duration_3_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
       url_primary: CDO.studio_url("/courses/self-paced-pl-csd"),
-      url_secondary: CDO.studio_url("/courses/csd"),
+      url_secondary: CDO.studio_url("/courses/csd?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_csd),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_csd),
     },
