add viewAs to the /courses/ links

--- a/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_middle.haml
+++ b/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_middle.haml
@@ -7,7 +7,7 @@
       curriculum: hoc_s(:curriculum_name_all_ai),
       duration: hoc_s(:module_duration_5_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-ai-101"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-ai-101?viewAs=Instructor"),
       url_secondary: '/ai#ai-curricula',
       aria_label_primary: hoc_s(:aria_label_call_to_action_ai_101),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_ai_101),
@@ -23,7 +23,7 @@
         curriculum: hoc_s(:curriculum_name_coding_with_ai),
         duration: hoc_s(:module_duration_2_hrs),
         prerequisites: hoc_s(:module_prerequisites_none),
-        url_primary: CDO.studio_url("/courses/self-paced-pl-coding-with-ai"),
+        url_primary: CDO.studio_url("/courses/self-paced-pl-coding-with-ai?viewAs=Instructor"),
         url_secondary: '/curriculum/coding-with-ai',
         aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_coding_with_ai),
         aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_coding_with_ai),
@@ -39,7 +39,7 @@
       curriculum: hoc_s(:module_label_teaching_animations),
       duration: hoc_s(:module_duration_3_hrs_20_minutes),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit3"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit3?viewAs=Instructor"),
       url_secondary: CDO.studio_url("/s/interactive-games-animations?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_interactive_animations_games),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_interactive_animations_games),
@@ -51,7 +51,7 @@
       curriculum: hoc_s(:curriculum_name_maker_cp),
       duration: hoc_s(:module_duration_3_hrs),
       prerequisites: hoc_s(:module_prerequisites_maker_cp),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-physical-computing"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-physical-computing?viewAs=Instructor"),
       url_secondary: CDO.studio_url("/s/devices?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_maker_cp),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_maker_cp),
@@ -63,8 +63,8 @@
       curriculum: hoc_s(:curriculum_name_csd),
       duration: hoc_s(:module_duration_3_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csd"),
-      url_secondary: CDO.studio_url("/courses/csd?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csd?viewAs=Instructor"),
+      url_secondary: CDO.studio_url("/courses/csd?viewAs=Instructor?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_csd),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_csd),
     },
@@ -75,7 +75,7 @@
       curriculum: hoc_s(:curriculum_name_problem_solving),
       duration: hoc_s(:module_duration_2_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit1"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit1?viewAs=Instructor"),
       url_secondary: CDO.studio_url("/s/problem-solving-computing?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_problem_solving),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_problem_solving),
@@ -87,7 +87,7 @@
       curriculum: hoc_s(:curriculum_name_maker_microbit),
       duration: hoc_s(:module_duration_3_hrs),
       prerequisites: hoc_s(:module_prerequisites_maker_microbit),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-microbit"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-microbit?viewAs=Instructor"),
       url_secondary: CDO.studio_url("/s/microbit?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_maker_microbit),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_maker_microbit),
@@ -99,7 +99,7 @@
       curriculum: hoc_s(:curriculum_name_ai),
       duration: hoc_s(:module_duration_2_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-aiml"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-aiml?viewAs=Instructor"),
       url_secondary: CDO.studio_url("/s/aiml?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_ai),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_ai),
@@ -111,7 +111,7 @@
       curriculum: hoc_s(:curriculum_name_data_and_society),
       duration: hoc_s(:module_duration_2_hrs_30_minutes),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit5"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit5?viewAs=Instructor"),
       url_secondary: CDO.studio_url("/s/data-society?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_explore_data_society_pl),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_explore_data_society_curriculum),
@@ -123,7 +123,7 @@
       curriculum: hoc_s(:curriculum_name_design_process),
       duration: hoc_s(:module_duration_2_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit4"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit4?viewAs=Instructor"),
       url_secondary: CDO.studio_url("/s/design-process?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_the_design_process),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_design_process),
@@ -135,7 +135,7 @@
       curriculum: hoc_s(:curriculum_name_web_development),
       duration: hoc_s(:module_duration_2_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url('/courses/self-paced-pl-csd-unit2'),
+      url_primary: CDO.studio_url('/courses/self-paced-pl-csd-unit2?viewAs=Instructor'),
       url_secondary: CDO.studio_url('/s/web-development?viewAs=Instructor'),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_web_development),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_web_development),
