--- a/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_elementary.haml
+++ b/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_elementary.haml
@@ -7,7 +7,7 @@
       curriculum: hoc_s(:curriculum_name_all_ai),
       duration: hoc_s(:module_duration_5_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-ai-101"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-ai-101?viewAs=Instructor"),
       url_secondary: '/ai#ai-curricula',
       aria_label_primary: hoc_s(:aria_label_call_to_action_ai_101),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_ai_101),
@@ -23,7 +23,7 @@
         curriculum: hoc_s(:curriculum_name_how_ai_makes_decisions),
         duration: hoc_s(:module_duration_1_hr),
         prerequisites: hoc_s(:module_prerequisites_none),
-        url_primary: CDO.studio_url("/courses/elementaryai-2024"),
+        url_primary: CDO.studio_url("/courses/elementaryai-2024?viewAs=Instructor"),
         url_secondary: CDO.studio_url('/s/k5-ai-data-2024?viewAs=Instructor'),
         aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_how_ai_makes_decisions),
         aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_how_ai_makes_decisions),
@@ -36,7 +36,7 @@
         curriculum: hoc_s(:curriculum_name_elementary_game_design),
         duration: hoc_s(:module_duration_1_hr_30_minutes),
         prerequisites: hoc_s(:module_prerequisites_none),
-        url_primary: CDO.studio_url("/courses/3-5gamedesign-2024"),
+        url_primary: CDO.studio_url("/courses/3-5gamedesign-2024?viewAs=Instructor"),
         url_secondary: CDO.studio_url('/s/elem-game-design-2024?viewAs=Instructor'),
         aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_elementary_game_design),
         aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_elementary_game_design),
@@ -49,7 +49,7 @@
         curriculum: hoc_s(:curriculum_name_microbit_maker_modules),
         duration: hoc_s(:module_duration_1_hr_30_minutes),
         prerequisites: hoc_s(:module_prerequisites_none),
-        url_primary: CDO.studio_url("/courses/microbitmakermodule-2024"),
+        url_primary: CDO.studio_url("/courses/microbitmakermodule-2024?viewAs=Instructor"),
         url_secondary: "/maker",
         aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_microbit_maker_module),
         aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_microbit_maker_module),
@@ -89,7 +89,7 @@
       curriculum: hoc_s(:curriculum_name_all_k5),
       duration: hoc_s(:module_duration_2_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-k5-2024"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-k5-2024?viewAs=Instructor"),
       url_secondary: "/educate/curriculum/elementary-school",
       aria_label_primary: hoc_s(:aria_label_call_to_action_explore_k5_self_paced_pl),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_explore_k_5_curriculum),
