--- a/apps/src/aichat/views/presentation/presentation-view.module.scss
+++ b/apps/src/aichat/views/presentation/presentation-view.module.scss
@@ -1,9 +1,13 @@
 @import 'color';
 
 .modelCardTitle {
-    background-color: $neutral_light;
-    margin: 5px;
-    margin-bottom: 20px;
-    text-align: center;
-    padding: 10px;
+  margin: 5px;
+  margin-bottom: 20px;
+  text-align: center;
+  padding: 10px;
+}
+
+.modelCardFields {
+  overflow-y: auto;
+  height: 70vh;
 }
