--- a/apps/src/aichat/views/chatWorkspace.module.scss
+++ b/apps/src/aichat/views/chatWorkspace.module.scss
@@ -1,8 +1,10 @@
 @import 'color.scss';
+@import './aichat-common.module.scss';
 
 $default-spacing: 2px;
 
 .chatWorkspace {
+  @extend %panel-section;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -18,7 +20,7 @@ $default-spacing: 2px;
   flex-grow: 1;
   gap: $default-spacing;
   box-sizing: border-box;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .waitingForResponse {
