add viewAs back to link after merge conflict

--- a/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_elementary.haml
+++ b/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_elementary.haml
@@ -49,7 +49,7 @@
         curriculum: hoc_s(:curriculum_name_microbit_maker_modules),
         duration: hoc_s(:module_duration_1_hr_30_minutes),
         prerequisites: hoc_s(:module_prerequisites_none),
-        url_primary: CDO.studio_url("/courses/microbitmakermodule-2024"),
+        url_primary: CDO.studio_url("/courses/microbitmakermodule-2024?viewAs=Instructor"),
         url_secondary: "/maker#curriculum-link-microbit",
         aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_microbit_maker_module),
         aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_microbit_maker_module),
