--- a/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_high.haml
+++ b/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_high.haml
@@ -7,7 +7,7 @@
       curriculum: hoc_s(:curriculum_name_all_ai),
       duration: hoc_s(:module_duration_5_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-ai-101?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-ai-101"),
       url_secondary: '/ai#ai-curricula',
       aria_label_primary: hoc_s(:aria_label_call_to_action_ai_101),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_ai_101),
@@ -23,7 +23,7 @@
         curriculum: hoc_s(:curriculum_name_coding_with_ai),
         duration: hoc_s(:module_duration_2_hrs),
         prerequisites: hoc_s(:module_prerequisites_none),
-        url_primary: CDO.studio_url("/courses/self-paced-pl-coding-with-ai?viewAs=Instructor"),
+        url_primary: CDO.studio_url("/courses/self-paced-pl-coding-with-ai"),
         url_secondary: '/curriculum/coding-with-ai',
         aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_coding_with_ai),
         aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_coding_with_ai),
@@ -36,7 +36,7 @@
         curriculum: hoc_s(:curriculum_name_computer_vision),
         duration: hoc_s(:module_duration_1_hr_30_minutes),
         prerequisites: hoc_s(:module_prerequisites_none),
-        url_primary: CDO.studio_url("/courses/self-paced-pl-computer-vision?viewAs=Instructor"),
+        url_primary: CDO.studio_url("/courses/self-paced-pl-computer-vision"),
         url_secondary: '/curriculum/computer-vision',
         aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_computer_vision),
         aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_computer_vision),
@@ -52,7 +52,7 @@
       curriculum: hoc_s(:curriculum_name_csp),
       duration: hoc_s(:module_duration_3_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csp?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csp"),
       url_secondary: CDO.studio_url("/courses/csp?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_csp),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_csp),
@@ -64,7 +64,7 @@
       curriculum: hoc_s(:curriculum_name_ai),
       duration: hoc_s(:module_duration_2_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-aiml?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-aiml"),
       url_secondary: CDO.studio_url("/s/aiml?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_ai),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_ai),
@@ -76,7 +76,7 @@
       curriculum: hoc_s(:curriculum_name_maker_microbit),
       duration: hoc_s(:module_duration_3_hrs),
       prerequisites: hoc_s(:module_prerequisites_maker_microbit),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-microbit?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-microbit"),
       url_secondary: CDO.studio_url("/s/microbit?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_maker_microbit),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_maker_microbit),
@@ -88,7 +88,7 @@
       curriculum: hoc_s(:curriculum_name_csd),
       duration: hoc_s(:module_duration_3_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csd?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csd"),
       url_secondary: CDO.studio_url("/courses/csd?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_csd),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_csd),
@@ -100,7 +100,7 @@
       curriculum: hoc_s(:curriculum_name_maker_cp),
       duration: hoc_s(:module_duration_3_hrs),
       prerequisites: hoc_s(:module_prerequisites_maker_cp),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-physical-computing?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-physical-computing"),
       url_secondary: CDO.studio_url("/s/devices?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_maker_cp),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_maker_cp),
@@ -112,7 +112,7 @@
       curriculum: hoc_s(:module_label_teaching_animations),
       duration: hoc_s(:module_duration_3_hrs_20_minutes),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit3?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit3"),
       url_secondary: CDO.studio_url("/s/interactive-games-animations?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_interactive_animations_games),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_interactive_animations_games),
@@ -124,7 +124,7 @@
       curriculum: hoc_s(:curriculum_name_problem_solving),
       duration: hoc_s(:module_duration_2_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit1?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit1"),
       url_secondary: CDO.studio_url("/s/problem-solving-computing?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_problem_solving),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_problem_solving),
@@ -136,7 +136,7 @@
       curriculum: hoc_s(:curriculum_name_data_and_society),
       duration: hoc_s(:module_duration_2_hrs_30_minutes),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit5?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit5"),
       url_secondary: CDO.studio_url("/s/data-society?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_explore_data_society_pl),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_explore_data_society_curriculum),
@@ -148,7 +148,7 @@
       curriculum: hoc_s(:curriculum_name_design_process),
       duration: hoc_s(:module_duration_2_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
-      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit4?viewAs=Instructor"),
+      url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit4"),
       url_secondary: CDO.studio_url("/s/design-process?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_the_design_process),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_design_process),
