Add viewAs=Instructor to relevant Self-Paced PL links (#59477)
* add viewAs Instructor to self_paced_pl_modules_carousel_elementary.haml

* add viewAs Instructor to middle and high carousels

* clean up

* add viewAs to the /courses/ links

* remove duplicate elementary carousel due to merge conflict

* add viewAs back to link after merge conflict

* remove viewAs from links

* remove last uneeded viewAs on link

--- a/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_high.haml
+++ b/pegasus/sites.v3/code.org/views/self_paced_pl/self_paced_pl_modules_carousel_high.haml
@@ -113,7 +113,7 @@
       duration: hoc_s(:module_duration_3_hrs_20_minutes),
       prerequisites: hoc_s(:module_prerequisites_none),
       url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit3"),
-      url_secondary: CDO.studio_url("/s/interactive-games-animations"),
+      url_secondary: CDO.studio_url("/s/interactive-games-animations?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_interactive_animations_games),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_interactive_animations_games),
     },
@@ -125,7 +125,7 @@
       duration: hoc_s(:module_duration_2_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
       url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit1"),
-      url_secondary: CDO.studio_url("/s/problem-solving-computing"),
+      url_secondary: CDO.studio_url("/s/problem-solving-computing?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_problem_solving),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_problem_solving),
     },
@@ -137,7 +137,7 @@
       duration: hoc_s(:module_duration_2_hrs_30_minutes),
       prerequisites: hoc_s(:module_prerequisites_none),
       url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit5"),
-      url_secondary: CDO.studio_url("/s/data-society"),
+      url_secondary: CDO.studio_url("/s/data-society?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_explore_data_society_pl),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_explore_data_society_curriculum),
     },
@@ -149,7 +149,7 @@
       duration: hoc_s(:module_duration_2_hrs),
       prerequisites: hoc_s(:module_prerequisites_none),
       url_primary: CDO.studio_url("/courses/self-paced-pl-csd-unit4"),
-      url_secondary: CDO.studio_url("/s/design-process"),
+      url_secondary: CDO.studio_url("/s/design-process?viewAs=Instructor"),
       aria_label_primary: hoc_s(:aria_label_call_to_action_teaching_the_design_process),
       aria_label_secondary: hoc_s(:aria_label_call_to_action_curriculum_design_process),
     },
