--- a/apps/src/aichat/views/chatWorkspace.module.scss
+++ b/apps/src/aichat/views/chatWorkspace.module.scss
@@ -1,6 +1,6 @@
 @import 'color.scss';
 
-$default-spacing: 2px;
+$default-spacing: 16px;
 
 .chatWorkspace {
   height: 100%;
@@ -18,6 +18,7 @@ $default-spacing: 2px;
   gap: $default-spacing;
   box-sizing: border-box;
   overflow-y: auto;
+  padding: $default-spacing;
 }
 
 .waitingForResponse {
