add letter to each option

--- a/apps/src/lab2/views/components/predict-question.module.scss
+++ b/apps/src/lab2/views/components/predict-question.module.scss
@@ -6,8 +6,13 @@
   }
 }
 
-.multipleChoiceLabel {
+.multipleChoiceLetter {
+  font-weight: bold;
   margin-left: 4px;
+}
+
+.multipleChoiceLabel {
+  margin-left: 6px;
 }
 
 .freeResponse {
