--- a/apps/src/componentLibrary/common/styles/primitiveColors.scss
+++ b/apps/src/componentLibrary/common/styles/primitiveColors.scss
@@ -1,4 +1,10 @@
+@import "utils2.css";
+@import "utils.css";
+
 /* Primitive Colors */
+div{
+  color: var(--bg-info-strong);
+}
 
 // Accent colors
 // Accent aqua colors
