--- a/dashboard/app/views/helpful_links/index.html.haml
+++ b/dashboard/app/views/helpful_links/index.html.haml
@@ -15,7 +15,7 @@
 %ul
   %li= link_to 'Dataset Library', '/datasets'
   %li= link_to 'Data Docs', '/data_docs'
-  %li= link_to 'Dataset Mainfest', '/datasets/manifest/edit'
+  %li= link_to 'Dataset Manifest', '/datasets/manifest/edit'
 
 %h2 Miscellaneous
 %ul
